<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.google.mycalcultor.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#0db9f8">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOne"
        android:id="@+id/button1"
        android:minWidth="95dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTwo"
        android:id="@+id/button2"
        android:minWidth="95dp"
        android:layout_alignTop="@+id/button1"
        android:layout_toEndOf="@+id/button1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonThree"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFour"
        android:id="@+id/button4"
        android:minWidth="95dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFive"
        android:id="@+id/button5"
        android:minWidth="95dp"
        android:layout_above="@+id/button7"
        android:layout_toEndOf="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSix"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSeven"
        android:id="@+id/button7"
        android:minWidth="95dp"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEight"
        android:id="@+id/button8"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNine"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear"
        android:id="@+id/buttonC"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonZero"
        android:id="@+id/button0"
        android:layout_alignTop="@+id/buttonC"
        android:layout_toEndOf="@+id/buttonC"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEquals"
        android:id="@+id/buttonE"
        android:layout_alignTop="@+id/button0"
        android:layout_toEndOf="@+id/button0"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDivision"
        android:id="@+id/buttonD"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMultiplication"
        android:id="@+id/buttonM"
        android:layout_below="@+id/buttonD"
        android:layout_toEndOf="@+id/button6"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSubtraction"
        android:id="@+id/buttonS"
        android:layout_below="@+id/buttonM"
        android:layout_toEndOf="@+id/button9"
        android:minWidth="95dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddtion"
        android:id="@+id/buttonA"
        android:layout_below="@+id/buttonS"
        android:layout_toEndOf="@+id/buttonE"
        android:minWidth="95dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Result"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />

</RelativeLayout>
